2007-02-01
  Added loop tutorial (skeptomai)

2007-01-28
  updated strings, clisp location, minor spelling corrections
  (skeptomai)

2007-01-06
  Added "Testing" section (Austin King)

2005-08-03
  Corrected the Emacs for Windows URL in windows.html and thus fixed/closed 
  the bug related to it.

2005-08-02
  Added the replace-all function definition and one example for its
  usage to strings.html.
  Clarification about idle process in process.html.
  Updated index.html and added Emre Sevinc to list of contributors.

2005-04-17
  Updated copyright notice and some links.

2003-12-07
  Added "Fast Bulk I/O" entry by Zach Beane
  Added Zach Beane to list of contributors
  Updated links to CLHS (now at www.lispworks.com)

2003-11-01
  Updated windows.html, and .emacs by Bill Clementson to add support
  for Corman Lisp v2.5.
  Added "Using Emacs as a Lisp IDE" material.

2003-10-21
  Added CLOS tutorial.
  
2003-10-09
  Updated .emacs by Bill Clementson to support re-indentation of
  top-level sexp/defun.

2003-10-04
  Updated index.html, and added emacs-ide.html by Bill
  Clementson. Added place-holder page for the "Using Emacs as a Lisp
  IDE" page that I will post after my ILC2003 presentation.

2003-10-03
  Updated windows.html, and .emacs by Bill Clementson - added back
  in Corman Lisp support (nobody else seemed to be having problems
  with it but me) and added support for the info version of the ANSI
  CL documentation.

2003-09-30
  Updated windows.html, and .emacs by Bill Clementson - removed
  Corman Lisp support since haven't been able to get Corman releases
  after 1.5 to work in either inferior lisp mode or ilisp.

2003-09-25
  Updated .emacs by Bill Clementson - allow evals in info.

2003-09-15
  Updated windows.html, and .emacs by Bill Clementson - minor key
  mods.

2003-09-14
  Updated windows.html, and .emacs by Bill Clementson - minor mods.

2003-09-03
  Updated windows.html, and .emacs by Bill Clementson to support
  clisp 2.31.

2003-09-02