@@ -1,3 +1,7 @@
+2007-11-01
+  Changed Alberto's address
+  Updated link section
+
 2007-02-01
   Added loop tutorial (skeptomai)
 
